# raspberry-pi-pico-neopixel-freertos

./: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  build-project.sh  main.cpp  pico_sdk_import.cmake  run-tests.sh
config/: FreeRTOSConfig.h
pio/: ws2812.pio
src/: box_lights_app.cpp  main.cpp  neopixel_controller.cpp  switch_controller.cpp
src/include/: box_lights_app.hpp  config.hpp  led_utils.hpp  neopixel_controller.hpp  switch_controller.hpp
tests/: CMakeLists.txt  test_config.cpp  test_led_utils.cpp
